mysqlPod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mysql-pod
spec:
 containers:
 - name: mysql-admin
   image: fayabobo/mysql:1.0
   ports:
   - containerPort: 3306
