phpmyadminPod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: my-php-admin-pod
spec:
 containers:
 - name: my-php-admin
   image: phpmyadmin/phpmyadmin:latest
   ports:
   - containerPort: 8080
   link: mysql-admin:db
