phpmyadmin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: phpmyadmin-ingress
spec:
 backend:
  serviceName: phpmyadmin-service
  servicePort: 8080
